<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPk.HangmanPk.hangmanOption"
    android:id="@+id/screenHangmanOptionId">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backHOId"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeHOId"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <ImageView
            android:id="@+id/homeHOId"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:fontFamily="@font/bigshot_one_regular"
        android:id="@+id/optionHO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/hangman_option"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#101010"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ScrollView
        android:id="@+id/sv_HangmanMenuHO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionHO">

        <LinearLayout
            android:id="@+id/HangmanMenuHO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/hangmanGameHO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|fill_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_hangman"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#020202"
                android:textSize="25sp" />

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/resetHOId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reset"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/numberLevelHO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|fill_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/best_level"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#020202"
                android:textSize="25sp" />

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/numberLevelHOId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#0C0C0C"
                android:textSize="20sp" />

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/difficultyHO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|fill_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/hangman_level"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#020202"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/HangmanDifficultyHO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/bigshot_one_regular"
                    android:id="@+id/levelEasyHOId"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/level_easy"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:fontFamily="@font/bigshot_one_regular"
                    android:id="@+id/levelMediumHOId"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/level_medium"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:fontFamily="@font/bigshot_one_regular"
                    android:id="@+id/levelHardHOId"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/level_hard"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:fontFamily="@font/bigshot_one_regular"
                    android:id="@+id/levelChallengeHOId"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/txt_challenge"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:fontFamily="@font/bigshot_one_regular"
                android:id="@+id/tipsHOId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/text_tips"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>